--- a/room.html
+++ b/room.html
@@ -144,7 +144,7 @@
         <div class="vl">
           <div class="add-review">
               <h1>Add review</h1>
-              <form name="reviewForm"class="reviewForm" action="room.html" method="post">
+              <form action="room.html" method="post">
                 <input type="hidden" name="room_id" value="<?php echo $roomId ?>">
                 <input type="hidden" name="csrf" value="<?php echo $csrf?>">
                 <h2>
