--- a/room.html
+++ b/room.html
@@ -144,7 +144,7 @@
         <div class="vl">
           <div class="add-review">
               <h1>Add review</h1>
-              <form action="room.html" method="post">
+              <form action="room.html" method="get">
                 <h2>
                   <div class="rate">
                     <input type="radio" id="star5" name="rate" value="5" />
